ITEDUCATION-3: mail service target added to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /it-education-commons/target/
 /it-education-gateway/target/
 /it-education-userservice/target/
+/it-education-mail-service/target/
 
 ### IntelliJ IDEA ###
 .idea
