ITEDUCATION-1: added user id and logout

--- a/it-education-gateway/src/main/resources/application.yml
+++ b/it-education-gateway/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
         - id: static
           uri: http://localhost:3000
           predicates:
-            - Path=/static/**,/
+            - Path=/static/**,/**
 #        - id: webapp
 #          uri: http://localhost:8081
 #          predicates:
