ITEDUCATION-4: added db tests for creation and verification account, minor fixes

--- a/it-education-userservice/src/test/resources/application-test.yml
+++ b/it-education-userservice/src/test/resources/application-test.yml
@@ -4,3 +4,6 @@ iteducation:
       mailserviceurl: "http://localhost:8086/mailservice"
       expiration: 3600
       verificationurl: "http://localhost:8080/profile/verification/"
+spring:
+  main:
+    allow-bean-definition-overriding: true
