--- a/it-education-mail-service/src/main/resources/application.properties
+++ b/it-education-mail-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8086
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=sergei.kulebiakin
+spring.mail.username=sergei.kulebiakin@gmail.com
 spring.mail.password=fndcgsz7C
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
